--- a/assets/style/navigation.css
+++ b/assets/style/navigation.css
@@ -83,12 +83,11 @@ nav ul {
     
     height: 72px;
     width: 146px;
-}
 
-.nav-mobile .cvLink a {
     color: var(--primary1100);
+    align-items: center;
+    justify-content: center;
 }
-
 
 @media (min-width: 320px) and (max-width: 768px) {
 
@@ -102,12 +101,19 @@ nav ul {
     .nav-desktop ul {
         display: flex;
         align-items: baseline;
+        justify-content: space-between;
+
+        width: 50vw;
     }
 
     .nav-desktop li {
         margin-inline: 3rem;
-        /* font-family: var(--title-monospace); */
-        font-size: var(--body1-fs);
+        padding: 0.5rem 1rem;
+        border-radius: 0.5rem;
+
+        font-family: var(--title-monospace);
+        font-size: var(--h6-fs);
+
         position: relative;
     }
 
@@ -117,12 +123,19 @@ nav ul {
     }
 
     .nav-desktop .cvLink {
-        padding: 0.5rem 2rem;
-
-        background-color: var(--primary700);
+        padding: 1rem 3rem;
+        color: var(--primary1100);
     }
 
-    .nav-desktop .cvLink:hover {
+    .nav-desktop .cvLink:hover,
+    .nav-desktop li:hover {
         background-color: var(--primary800);
+        /* border-color: var(--primary900);
+        border-width: 2px; */
+        /* color: var(--primary1000); */
+    }
+
+    .nav-desktop li:last-child:hover {
+        background-color: transparent;
     }
 }
