tried to implement scroll snap but footer gets stuck on viewport bottom

--- a/assets/style/navigation.css
+++ b/assets/style/navigation.css
@@ -91,13 +91,19 @@ nav ul {
     justify-content: center;
 }
 
-@media (min-width: 320px) and (max-width: 768px) {
-
-}
-
 @media (min-width: 769px) {
     .navButton {
         display: none;
+    }
+
+    .nav-desktop {
+        --animation-start: 200vh;
+        --animation-end: 220vh;
+
+        /* animation: movingNav linear forwards;
+        animation-timeline: view();
+        animation-range-start: var(--animation-start);
+        animation-range-end: var(--animation-end); */
     }
 
     .nav-desktop ul {
@@ -106,6 +112,11 @@ nav ul {
         justify-content: space-between;
 
         width: 50vw;
+
+        /* animation: movingUl linear forwards;
+        animation-timeline: view();
+        animation-range-start: var(--animation-start);
+        animation-range-end: var(--animation-end); */
     }
 
     .nav-desktop li {
@@ -117,11 +128,20 @@ nav ul {
         font-size: var(--h6-fs);
 
         position: relative;
-    }
 
+    }
+    
+    
     .nav-desktop li span {
         position: absolute;
         left: -3rem;
+    }
+    
+    .nav-desktop li:hover {
+        color: var(--text);
+    }
+    .nav-desktop li a {
+        /* animation: changingA linear forwards; */
     }
 
     .nav-desktop .cvLink {
@@ -136,5 +156,28 @@ nav ul {
 
     .nav-desktop li:last-child:hover {
         background-color: transparent;
+    }
+
+    /* animate nav so it goes up when scolling down, top: -5rem, and then appears at the right in new position fixed */
+
+    /* @keyframes movingNav {
+        100% {
+            position: fixed;
+            right: 0;
+            top: 40%;
+        }
+    } */
+
+    /* @keyframes movingUl {
+        100% {
+            flex-direction: column;
+            width: fit-content;
+        }
+    } */
+    
+    @keyframes changingA {
+        100% {
+            color: var(--secondary100);
+        }
     }
 }
