--- a/assets/style/layout.css
+++ b/assets/style/layout.css
@@ -31,35 +31,56 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-    }
 
+        width: 100vw;
+        height: 100vh;
+
+        position: relative;
+    }
+    
     .container {
-        width: 50vw;
-    }
+        /* background-color: red !important; */
+        /* width: 50vw; */
+        /* height: 100%;  */
+        /* scroll-snap-type: y proximity; */
 
-    html {
-        scroll-snap-type: y mandatory;
+        /* overflow-y: scroll; */
+        /* width: 100%; */
     }
 
     .margin {
-        margin-top: 2.5rem;
+        /* margin-top: 2.5rem; */
     }
 
     .layout {
         /* height: 100vh; */
-        /* margin-top: 5rem; */
-        scroll-snap-align: start;
+        width: 50vw;
+        margin-inline: auto;
+        /* width: 100vw; */
+        margin-top: 5rem;
+        /* scroll-snap-align: start; */
         margin-bottom: 10rem;
     }
 
+    .layout:nth-child(1) {
+        /* background-color: blue; */
+    }
+    .layout:nth-child(2) {
+        /* background-color: purple; */
+    }
+
     .layout:nth-child(3) {
-        /* height: 150vh; */
+        /* background-color: green; */
+        /* height: 130vh; */
     }
 
     .layout:last-child {
-        /* height: 80vh; */
+        /* background-color: yellow; */
+        /* height: 70vh; */
         /* position: relative;
         top: 12rem; */
+        /* padding-top: 15rem; */
+        /* height: calcl(100vh - 10rem); */
     }
 
     .layout:last-child > * {
