--- a/assets/style/layout.css
+++ b/assets/style/layout.css
@@ -42,9 +42,10 @@
         /* background-color: red !important; */
         /* width: 50vw; */
         /* height: 100%;  */
-        /* scroll-snap-type: y proximity; */
+        height: 100vh;
+        scroll-snap-type: y mandatory;
 
-        /* overflow-y: scroll; */
+        overflow-y: scroll;
         /* width: 100%; */
     }
 
@@ -53,33 +54,36 @@
     }
 
     .layout {
-        /* height: 100vh; */
-        width: 50vw;
+        height: 100vh;
+        /* width: 50vw; */
         margin-inline: auto;
         /* width: 100vw; */
         margin-top: 5rem;
-        /* scroll-snap-align: start; */
-        margin-bottom: 10rem;
+        scroll-snap-align: start;
+        /* margin-bottom: 10rem; */
     }
-
+    
     .layout:nth-child(1) {
         /* background-color: blue; */
+        width: 50vw;
     }
     .layout:nth-child(2) {
         /* background-color: purple; */
+        width: 50vw;
     }
-
+    
     .layout:nth-child(3) {
+        width: 50vw;
         /* background-color: green; */
-        /* height: 130vh; */
+        height: 150vh;
     }
 
     .layout:last-child {
-        /* background-color: yellow; */
-        /* height: 70vh; */
+        /* background-color: yellow;
+        height: 90vh; */
         /* position: relative;
         top: 12rem; */
-        /* padding-top: 15rem; */
+        padding-top: 10rem;
         /* height: calcl(100vh - 10rem); */
     }
 
