--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,8 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+/* 
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -11,6 +16,8 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  --color : #d54ed5;
 }
 
 a {
@@ -66,3 +73,5 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
+
+ */
